Adoption de autoconf et clean attitude
On adopte dans cette révision l'utilisation d'autoconf.
On crée des listes DISTCLEAN, DISTCLEANDIRS, REALCLEAN et
REALCLEANDIRS s'ajoutant à CLEANFILES, pour réaliser les cibles
`celan' `distclean' et `realclean'.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@36 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,10 @@ SUBDIR+= text
 SUBDIR+= rox
 SUBDIR+= misc
 
-.include "Makefile.inc"
+PREFIX?= @prefix@
+
+.MAKEFLAGS: -I${.CURDIR}/Library/Make
+
 .include "pallas.mk"
 
 ### End of file `Makefile'
