Installation de bps.dist.mk
Ce fichier est omis de la liste d'installation dans la révision
précédente.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@64 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -16,6 +16,7 @@ FILES+=	bps.clean.mk
 FILES+=	bps.subdir.mk
 FILES+=	bps.files.mk
 FILES+= bps.autoconf.mk
+FILES+= bps.dist.mk
 
 .include "project.mk"
 
