Le fichier dist a été rendu obsolète par project
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/branches/releng-1.1@69 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -16,7 +16,7 @@ FILES+=	bps.clean.mk
 FILES+=	bps.subdir.mk
 FILES+=	bps.files.mk
 FILES+= bps.autoconf.mk
-FILES+= bps.dist.mk
+FILES+= bps.project.mk
 
 .include "project.mk"
 
