--- a/Makefile.in
+++ b/Makefile.in
@@ -6,7 +6,8 @@
 
 # $Id$
 
-VERSION = 1.1
+PROJECT = bsdmakepscripts
+VERSION = 1.1-rc1
 AUTHOR = Michaël Grünewald
 
 SUBDIR+= bps
@@ -18,6 +19,8 @@ SUBDIR+= misc
 PREFIX?= @prefix@
 
 .MAKEFLAGS: -I${.CURDIR}/Library/Make
+
+PROJECTDISTDIR = ${HOME}/Workshop/Distfiles/${PROJECT}
 
 .include "pallas.mk"
 
