Synchronisation avec release-1.1
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@94 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,6 +6,7 @@
 
 # $Id$
 
+PROJECT = bsdmakepscripts
 VERSION = 1.1
 AUTHOR = Michaël Grünewald
 
@@ -14,10 +15,13 @@ SUBDIR+= ocaml
 SUBDIR+= text
 SUBDIR+= rox
 SUBDIR+= misc
+SUBDIR+= support
 
 PREFIX?= @prefix@
 
 .MAKEFLAGS: -I${.CURDIR}/Library/Make
+
+PROJECTDISTDIR = ${HOME}/Workshop/Distfiles/${PROJECT}
 
 .include "pallas.mk"
 
