Réhabilitation du dossier www
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@98 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/www/Makefile
+++ b/www/Makefile
@@ -7,8 +7,8 @@
 # $Id$
 
 
-FILES =		www.files.mk
+FILES = www.files.mk
 
-.include "../Mk/project.mk"
+.include "project.mk"
 
 ### End of file `Makefile'
