Contournement d'un choix arbitraire de AUTOCONF
La variable `top_srcdir' peut fort bien avoir pour valeur un chemin
relatif, ce qui ne fonctionne pas avec `Makefile.inc'. On introduit
la variable `top_absolute_srcdir' pour contourner ce problème.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@105 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -12,6 +12,6 @@
 # ses utilisateurs), il contient les paramètres déterminés par `configure'.
 
 PREFIX?= @prefix@
-.MAKEFLAGS: -I@top_srcdir@/Library/Make
+.MAKEFLAGS: -I@top_absolute_srcdir@/Library/Make
 
 ### End of file `Makefile.inc'
