--- a/configure.ac
+++ b/configure.ac
@@ -1,3 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
+dnl
+dnl La variable`top_absolute_srcdir' semble faire double emploi avec
+dnl `top_srcdir', cela n'est pas le cas car `top_srcdir' peut avoir
+dnl pour valeur un chemin relatif.
 AC_INIT(bps/bps.init.mk)
+top_absolute_srcdir=`pwd`
+AC_SUBST(top_absolute_srcdir)
 AC_OUTPUT(Makefile.inc)
