Retour à l'organisation sans Makefile.inc
Cette organisation ne résout pas les problèmes contre lesquels
elle a été introduite.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@106 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,6 +6,8 @@
 
 # $Id$
 
+# @configure_input@
+
 PROJECT = bsdmakepscripts
 VERSION = 1.1
 AUTHOR = Michaël Grünewald
@@ -17,12 +19,9 @@ SUBDIR+= misc
 SUBDIR+= www
 SUBDIR+= support
 
-# Le fichier Makefile.inc est produit par la commande
-# `./configure'. Tant que la commande `./configure' n'a pas été
-# utilisée pour préparer l'arbre des sources, ce Makefile ne peut pas
-# être utilisé.
+PREFIX?= @prefix@
+.MAKEFLAGS: -I${.CURDIR}/Library/Make
 
-.include "Makefile.inc"
 .include "pallas.mk"
 
 ### End of file `Makefile'
