Production de tex.driver.pdftex.mk
Les modifications de cette règle de production ont une vocation
cosmétique.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@109 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/text/Makefile
+++ b/text/Makefile
@@ -22,7 +22,11 @@ FILES+= latex.doc.mk
 FILES+= latex.files.mk
 
 tex.driver.pdftex.mk: tex.driver.dvi.mk
-	sed -e 's/DVI/PDF/g' -e 's/dvi/pdf/g' ${.ALLSRC} > ${.TARGET}
+	sed \
+	  -e 's/tex\.driver\.dvi\.mk/tex\.driver\.pdftex\.mk/g'\
+	  -e 's/DVI/PDF/g' \
+	  -e 's/dvi/pdf/g' \
+	  ${.ALLSRC} > ${.TARGET}
 
 tex.device.pdf.mk: tex.device.dvi.mk
 	sed -e 's/DVI/PDF/g' -e 's/dvi/pdf/g' ${.ALLSRC} > ${.TARGET}
