--- a/text/Makefile
+++ b/text/Makefile
@@ -20,6 +20,7 @@ FILES+= tex.files.mk
 
 FILES+= latex.doc.mk
 FILES+= latex.files.mk
+FILES+= latex.bibtex.mk
 
 tex.driver.pdftex.mk: tex.driver.dvi.mk
 	sed \
