Support de l'option pack du compilateur ocaml
L'option pack du compilateur est supportée par la création
d'un module ocaml.pack.mk à utiliser à la place du module
ocaml.lib.mk pour produire une bibliothèque contenant des modules
empaquetés.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@140 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -13,6 +13,7 @@ FILES+= ocaml.flags.mk
 FILES+= ocaml.init.mk
 FILES+= ocaml.lex.mk
 FILES+= ocaml.lib.mk
+FILES+= ocaml.pack.mk
 FILES+= ocaml.main.mk
 FILES+= ocaml.object.mk
 FILES+= ocaml.prog.mk
