Révision du fichier autoconf
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@148 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-### Makefile
+### @autoconf_input@
 
 # Author: Michaël Grünewald
 # Date: Ven 10 fév 2006 16:50:40 GMT
@@ -16,6 +16,8 @@ SUBDIR+= text
 SUBDIR+= misc
 SUBDIR+= www
 SUBDIR+= support
+
+PREFIX?= @prefix@
 
 .MAKEFLAGS: -I${.CURDIR}/Library/Make
 
