Mise à jour des notices de Copyright
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@150 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -1,6 +1,6 @@
 ### Makefile -- Collection de Makefiles `make'
 
-# Author: Michaël Grünewald
+# Author: Michaël Le Barbier Grünewald
 # Date: Ven 10 fév 2006 16:51:08 GMT
 # Lang: fr_FR.ISO8859-1
 
