--- a/rox/Makefile
+++ b/rox/Makefile
@@ -1,6 +1,6 @@
 ### Makefile -- Collection pour les scripts du ROX-Filer
 
-# Author: Michaël Grünewald
+# Author: Michaël Le Barbier Grünewald
 # Date: Sam  7 jul 2007 18:12:40 CEST
 # Lang: fr_FR.ISO8859-1
 
