Mise à jour des notices de Copyright
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@150 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 ### @autoconf_input@
 
-# Author: Michaël Grünewald
+# Author: Michaël Le Barbier Grünewald
 # Date: Ven 10 fév 2006 16:50:40 GMT
 # Lang: fr_FR.ISO8859-1
 
