--- a/test/elisp/Makefile
+++ b/test/elisp/Makefile
@@ -1,6 +1,6 @@
 ### Makefile -- Test misc.elisp.mk
 
-# Author: Michaël Grünewald
+# Author: Michaël Le Barbier Grünewald
 # Date: Sam  7 jul 2007 18:08:19 CEST
 # Lang: fr_FR.ISO8859-1
 
