--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(bps/bps.init.mk)
-AC_OUTPUT(Makefile.in)
+AC_OUTPUT(Makefile)
 AC_OUTPUT(bps/bps.config.mk)
