Adding autoconf's install-sh 2009-04-28
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@152 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -16,9 +16,8 @@ FILES+=	bps.subdir.mk
 FILES+=	bps.files.mk
 FILES+= bps.autoconf.mk
 FILES+= bps.project.mk
-FILES+= bps.config.mk
 
-REALCLEANFILES+= bps.config.mk
+REALCLEANFILES+= bps.init.mk
 
 .include "project.mk"
 
