Support pour NOWEB
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@172 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -13,6 +13,7 @@ AUTHOR = Michaël Grünewald
 SUBDIR+= bps
 SUBDIR+= ocaml
 SUBDIR+= text
+SUBDIR+= noweb
 SUBDIR+= misc
 SUBDIR+= www
 SUBDIR+= support
