_BPS_TEXMDIR et APPLICATIONDIR
La definition de la variable APPLICATIONDIR est inconditionnelle: à
cause des incantations dans le module `project' la variable
APPLICATION peut être initalisée après le traitement de `init'.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@173 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/bps.init.mk.in
+++ b/bps/bps.init.mk.in
@@ -116,6 +116,7 @@ _BPS_PREFIX?= @prefix@
 _BPS_DATADIR?= ${_BPS_PREFIX}/share${_BPS_APPLICATIONDIR}
 _BPS_DOCDIR?= ${_BPS_PREFIX}/share/doc${_BPS_APPLICATIONDIR}
 _BPS_LIBEXECDIR?= ${_BPS_PREFIX}/libexec${_BPS_APPLICATIONDIR}
+_BPS_TEXMFDIR?= ${_BPS_PREFIX}/share/texmf
 
 ### PSEUDO COMMANDES (BOOTSTRAP)
 
@@ -189,9 +190,7 @@ REALCLEANDIRS?=
 
 ## APPLICATIONDIR
 
-.if defined(APPLICATION) && !empty(APPLICATION)
 APPLICATIONDIR?=	/${APPLICATION}
-.endif
 
 ## _MAKE_USERTARGET
 
