Réparation du kludgy slave insert
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@175 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/bps.init.mk.in
+++ b/bps/bps.init.mk.in
@@ -190,7 +190,9 @@ REALCLEANDIRS?=
 
 ## APPLICATIONDIR
 
+.if defined(APPLICATION)&&!empty(APPLICATION)
 APPLICATIONDIR?=	/${APPLICATION}
+.endif
 
 ## _MAKE_USERTARGET
 
