--- a/text/Makefile
+++ b/text/Makefile
@@ -6,7 +6,9 @@
 
 # $Id$
 
-FILES = tex.init.mk
+FILES = texmf.init.mk
+
+FILES+= tex.init.mk
 FILES+= tex.doc.main.mk
 FILES+= tex.doc.mk
 FILES+= tex.device.dvi.mk
