Renommage --Cette ligne, et les suivantes ci-dessous, seront ignorées--
M    Makefile.in
A  + texmf
A  + texmf/tex.files.mk
A  + texmf/tex.init.mk
A  + texmf/Makefile
D    text


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@177 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ AUTHOR = Michaël Grünewald
 
 SUBDIR+= bps
 SUBDIR+= ocaml
-SUBDIR+= text
+SUBDIR+= texmf
 SUBDIR+= noweb
 SUBDIR+= misc
 SUBDIR+= www
