Initialisation de USE_SUBDIR
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@183 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,8 +7,8 @@
 # $Id$
 
 PROJECT = bsdmakepscripts
-VERSION = 1.1
-AUTHOR = Michaël Grünewald
+VERSION = 1.2
+AUTHOR = Michaël Le Barbier Grünewald
 
 SUBDIR+= bps
 SUBDIR+= ocaml
