Modularisation de latex.doc.mk
La modularisation permet d'utiliser le service de latex.doc.mk en sous-tâche.


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@200 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/texmf/Makefile
+++ b/texmf/Makefile
@@ -22,6 +22,8 @@ FILES+= tex.files.mk
 FILES+= tex.files.main.mk
 
 FILES+= latex.doc.mk
+FILES+= latex.doc.pre.mk
+FILES+= latex.doc.post.mk
 FILES+= latex.bibtex.mk
 
 tex.driver.pdftex.mk: tex.driver.dvi.mk
