Adapté pour la modularisation de tex.doc.mk
La liste des directives `include' à la fin de noweb.latex.mk
est un peu trop longue, il faudrait mettre de l'ordre dans
les directives!


git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@201 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/noweb/Makefile
+++ b/noweb/Makefile
@@ -11,8 +11,8 @@ FILES+= noweb.latex.mk
 
 SHARE+= nwlatex.css
 
-TEXSRC+= nwlatex.tex
-TEXSRCDIR = ${TEXMFDIR}/tex/latex${APPLICATIONDIR}
+TEXFILES+= nwlatex.tex
+TEXFILESDIR = ${TEXMFDIR}/tex/latex${APPLICATIONDIR}
 
 .include "project.mk"
 
