Support of META files from the findlib library
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@233 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -9,6 +9,7 @@
 FILES+= ocaml.build.mk
 FILES+= ocaml.depend.mk
 FILES+= ocaml.find.mk
+FILES+= ocaml.meta.mk
 FILES+= ocaml.flags.mk
 FILES+= ocaml.init.mk
 FILES+= ocaml.lex.mk
