Always include credential switching procedures
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@248 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/bps/bps.init.mk.in
+++ b/bps/bps.init.mk.in
@@ -205,6 +205,7 @@ _MAKE_ALLSUBTARGET?=
 
 .include "bps.objdir.mk"
 .include "bps.autoconf.mk"
+.include "bps.credentials.mk"
 
 _MAKE_USERTARGET+= configure depend build doc all install
 _MAKE_USERTARGET+= clean distclean realclean
