Fixing installation path
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@259 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/noweb/Makefile
+++ b/noweb/Makefile
@@ -12,7 +12,7 @@ FILES+= noweb.latex.mk
 SHARE+= nwlatex.css
 
 TEXFILES+= nwlatex.tex
-TEXFILESDIR = ${TEXMFDIR}/tex/latex${APPLICATIONDIR}
+TEXFILESDIR = ${TEXMFDIR}/tex/latex${_BPS_APPLICATIONDIR}
 
 .include "project.mk"
 
