Edited test for TeX documents
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@265 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/test/tex/Makefile
+++ b/test/tex/Makefile
@@ -1,17 +1,13 @@
-### Makefile -- Test tex.texdoc.mk and co.
+### Makefile -- Test the production of TeX documents
 
-DOCS = toto.tex
+DOCS = octonions.tex
 
-FIGS.toto = illustrations.mp
+FIGS = sketches.mp
+SRCS = macros.tex
 
-TEX = pdftex
-FORMAT.dvi = brid_dvips
-FORMAT.pdf = brid_pdf
+.MAKEFLAGS: -I../../bps
+.MAKEFLAGS: -I../../texmf
 
-SRCS = extra.tex
-
-TEXINPUTS.toto = .. :
-
-.include "tex.doc.mk"
+.include "latex.doc.mk"
 
 ### End of file `Makefile'
