Actually updating style
The last update used a very old version of the stylesheets, this is
now fixed and the `update' target in the style directory is also
up to date by now.

git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@284 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Website/style/Makefile
+++ b/Website/style/Makefile
@@ -23,7 +23,7 @@ WPAGESDIR?= ${HOME}/Workshop/wpages
 
 .if exists(${WPAGESDIR}/style)
 update:
-	cd ${WPAGESDIR}/style && ${MAKE} PREFIX='${HOME}' WWWDIR='${.CURDIR}' all install
+	cd ${WPAGESDIR} && ${MAKE} PREFIX='${HOME}' WWWDIR='${.CURDIR}' all install
 .else
 update:
 	${FAIL} WPAGESDIR not found
