Splitting tex.doc.mk
This splitting allows the `bps.clean.mk' file to be read
after that the REALCLEANFILES variable has been
appropriately set up by the `latex.bibtex.mk' file.
	RELENG

git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/branches/releng-1.4@301 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/texmf/Makefile
+++ b/texmf/Makefile
@@ -9,7 +9,9 @@
 FILES = texmf.init.mk
 
 FILES+= tex.init.mk
+FILES+= tex.doc.pre.mk
 FILES+= tex.doc.main.mk
+FILES+= tex.doc.post.mk
 FILES+= tex.doc.mk
 FILES+= tex.device.dvi.mk
 FILES+= tex.device.ps.mk
