Genericize version numbers
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/branches/releng-1.4@311 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/Website/index/Makefile
+++ b/Website/index/Makefile
@@ -7,5 +7,6 @@ SRCS+= page-content.sgml
 SRCS+= more-ilink.sgml
 SRCS+= more-elink.sgml
 SRCS+= more-download.sgml
+SRCS+= head-css-local.sgml
 
 .include "scroll.mk"
