Portably determine the group of user root
On some systems, this group is `wheel', on others its is `root',
and so on.

git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@328 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/configure.ac
+++ b/configure.ac
@@ -7,5 +7,9 @@ AC_PROG_LN_S()
 AC_PROG_MKDIR_P()
 AC_PROG_SED()
 AC_PROG_ID()
+SYSTEMOWN=root
+SYSTEMGRP=`$ID -gn $SYSTEMOWN`
+AC_SUBST([SYSTEMOWN])
+AC_SUBST([SYSTEMGRP])
 AC_OUTPUT(Makefile)
 AC_OUTPUT(bps/bps.init.mk)
