--- a/bps/bps.init.mk.in
+++ b/bps/bps.init.mk.in
@@ -118,6 +118,9 @@ _BPS_DOCDIR?= ${_BPS_PREFIX}/share/doc${_BPS_APPLICATIONDIR}
 _BPS_LIBEXECDIR?= ${_BPS_PREFIX}/libexec${_BPS_APPLICATIONDIR}
 _BPS_TEXMFDIR?= ${_BPS_PREFIX}/share/texmf
 
+_BPS_SYSTEMOWN?= @SYSTEMOWN@
+_BPS_SYSTEMGRP?= @SYSTEMGRP@
+
 ### PSEUDO COMMANDES (BOOTSTRAP)
 
 ID?= @ID@
