Use PKGS instead of PACKAGES for ocamlfind packages
The name PACKAGES clashes with PACKAGE used in GNU Auto* suite and we consider
replacing our APPLICATION with PACKAGE.

- Rename PACKAGES to PKGS
- Add test case

Rework ocaml.find.mk

Add OCaml example for ocamlfind support

Update ignore patterns

--- a/test/ocaml/Makefile
+++ b/test/ocaml/Makefile
@@ -20,6 +20,24 @@ SUBDIR+=	newton
 SUBDIR+=	newton-doc
 SUBDIR+=	toplevel
 SUBDIR+=	basic
+SUBDIR+=	ocamlfind
+
+test-clean:
+	${MAKE} realclean
+
+test-base:
+	${MAKE} all
+	${MAKE} realclean
+
+test-doc:
+	${MAKE} doc
+	${MAKE} realclean
+
+test-parallel:
+	${MAKE} depend
+	${MAKE} -j4 build
+
+test: test-clean test-base test-doc test-parallel
 
 .include "bps.subdir.mk"
 
