--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -15,7 +15,7 @@ FILES+= ocaml.pack.mk
 FILES+= ocaml.main.mk
 FILES+= ocaml.object.mk
 FILES+= ocaml.prog.mk
-FILES+= ocaml.searches.mk
+FILES+= ocaml.dirs.mk
 FILES+= ocaml.source.mk
 FILES+= ocaml.target.mk
 FILES+= ocaml.template.mk
