--- a/test/ocaml/.gitignore
+++ b/test/ocaml/.gitignore
@@ -22,3 +22,5 @@ basic-2/basic_parser.ml
 basic-2/basic_parser.mli
 basic-2/minibasic
 basic-2/minibasic.cb
+golden-ratio/golden-ratio
+golden-ratio/golden-ratio.cb
