Update ignore patterns

--- a/test/ocaml/.gitignore
+++ b/test/ocaml/.gitignore
@@ -24,3 +24,20 @@ basic-2/minibasic
 basic-2/minibasic.cb
 golden-ratio/golden-ratio
 golden-ratio/golden-ratio.cb
+basic-3/basic_lexer.ml
+basic-3/basic_parser.ml
+basic-3/basic_parser.mli
+basic-4/basic_lexer.ml
+basic-4/basic_parser.ml
+basic-4/basic_parser.mli
+golden_ratio/golden_ratio
+golden_ratio/golden_ratio.cb
+miniproj-1/golden_ratio/golden_ratio
+miniproj-1/golden_ratio/golden_ratio.cb
+miniproj-2/golden_ratio/golden_ratio
+miniproj-2/golden_ratio/golden_ratio.cb
+miniproj-2/manual/golden_ratio_html/
+miniproj-3/golden_ratio/golden_ratio
+miniproj-3/golden_ratio/golden_ratio.cb
+miniproj-3/manual/golden_ratio_html/
+objdir/
