--- a/noweb/Makefile
+++ b/noweb/Makefile
@@ -10,7 +10,7 @@ FILES+= noweb.latex.mk
 SHARE+= nwlatex.css
 
 TEXFILES+= nwlatex.tex
-TEXFILESDIR = ${TEXMFDIR}/tex/latex${_BPS_APPLICATIONDIR}
+TEXFILESDIR = ${TEXMFDIR}/tex/latex${_BPS_PACKAGEDIR}
 
 .include "project.mk"
 
