Replace TARGET by COMPILE

--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -16,7 +16,7 @@ FILES+= ocaml.object.mk
 FILES+= ocaml.prog.mk
 FILES+= ocaml.dirs.mk
 FILES+= ocaml.source.mk
-FILES+= ocaml.target.mk
+FILES+= ocaml.compile.mk
 FILES+= ocaml.tools.mk
 FILES+= ocaml.yacc.mk
 FILES+= ocaml.odoc.mk
