Expand test to cover native code compilation

--- a/test/ocaml/.gitignore
+++ b/test/ocaml/.gitignore
@@ -1,29 +1,28 @@
+*.o
+*.a
+*.cb
+*.cn
+*.cmo
+*.cmx
 basic/basic_lexer.ml
 basic/basic_parser.ml
 basic/basic_parser.mli
 basic/minibasic
-basic/minibasic.cb
 newton-doc/newtontk.odoc
 newton-doc/newtontk_html/
 ocamlfind/wordcount
-ocamlfind/wordcount.cb
 toplevel/toplevel
 wordcount-1/wordcount
-wordcount-1/wordcount.cb
 wordcount-2/wordcount
-wordcount-2/wordcount.cb
 basic-1/basic_lexer.ml
 basic-1/basic_parser.ml
 basic-1/basic_parser.mli
 basic-1/minibasic
-basic-1/minibasic.cb
 basic-2/basic_lexer.ml
 basic-2/basic_parser.ml
 basic-2/basic_parser.mli
 basic-2/minibasic
-basic-2/minibasic.cb
 golden-ratio/golden-ratio
-golden-ratio/golden-ratio.cb
 basic-3/basic_lexer.ml
 basic-3/basic_parser.ml
 basic-3/basic_parser.mli
@@ -31,13 +30,9 @@ basic-4/basic_lexer.ml
 basic-4/basic_parser.ml
 basic-4/basic_parser.mli
 golden_ratio/golden_ratio
-golden_ratio/golden_ratio.cb
 miniproj-1/golden_ratio/golden_ratio
-miniproj-1/golden_ratio/golden_ratio.cb
 miniproj-2/golden_ratio/golden_ratio
-miniproj-2/golden_ratio/golden_ratio.cb
 miniproj-2/manual/golden_ratio_html/
 miniproj-3/golden_ratio/golden_ratio
-miniproj-3/golden_ratio/golden_ratio.cb
 miniproj-3/manual/golden_ratio_html/
 objdir/
