--- a/test/ocaml/golden_ratio/Makefile
+++ b/test/ocaml/golden_ratio/Makefile
@@ -22,8 +22,8 @@ LIBS+=		nums
 LIBS+=		newton
 LIBS+=		fibonacci
 
-DIRS=		${.CURDIR}/../newton
-DIRS+=		${.CURDIR}/../fibonacci
+DIRS=		${.OBJDIR}/../newton
+DIRS+=		${.OBJDIR}/../fibonacci
 
 newton.cma:
 	@cd ${.CURDIR}/../newton && ${MAKE} ${.TARGET}
