--- a/Makefile.in
+++ b/Makefile.in
@@ -5,7 +5,7 @@
 # Cookie: SYNOPSIS TARGET VARIABLE EN DOCUMENTATION
 
 PROJECT = bsdmakepscripts
-VERSION = 2.1-rc1
+VERSION = 2.1
 AUTHOR = Michael Grünewald
 
 SUBDIR+= bps
