Configure available compression tools and prefer xz over bzip2

--- a/bps/bps.init.mk.in
+++ b/bps/bps.init.mk.in
@@ -121,6 +121,8 @@ _BPS_TEXMFDIR?= ${_BPS_PREFIX}/share/texmf
 _BPS_SYSTEMOWN?= @SYSTEMOWN@
 _BPS_SYSTEMGRP?= @SYSTEMGRP@
 
+_BPS_COMPRESS?= @COMPRESS@
+
 ### PSEUDO COMMANDES (BOOTSTRAP)
 
 ID?= @ID@
