--- a/bps/bps.init.mk.in
+++ b/bps/bps.init.mk.in
@@ -222,7 +222,7 @@ _MAKE_ALLSUBTARGET?=
 .include "bps.credentials.mk"
 
 _MAKE_USERTARGET+= configure depend build doc all install
-_MAKE_USERTARGET+= clean distclean realclean
+_MAKE_USERTARGET+= test clean distclean realclean
 _MAKE_ALLSUBTARGET+= configure depend build doc
 
 
