Rework file header

--- a/bps/Makefile
+++ b/bps/Makefile
@@ -1,8 +1,18 @@
-### Makefile -- Collection de Makefiles `make'
+### Makefile -- Core facilities
 
 # Author: Michael Grünewald
-# Date: Ven 10 fév 2006 16:51:08 GMT
-# Cookie: SYNOPSIS TARGET VARIABLE EN DOCUMENTATION
+# Date: Fri 10 Feb 2006 16:51:08 GMT
+
+# BSD Owl Scripts (https://bitbucket.org/michipili/bsdowl)
+# This file is part of BSD Owl Scripts
+#
+# Copyright © 2005–2014 Michael Grünewald
+#
+# This file must be used under the terms of the CeCILL-B.
+# This source file is licensed as described in the file COPYING, which
+# you should have received as part of this distribution. The terms
+# are also available at
+# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
 FILES+=	bps.init.mk
 FILES+= bps.credentials.mk
